# simod-http

./: .dockerignore  .gitignore  .simod-http.env.dev  Dockerfile  README.md  build_docker.sh  compose-development-template.yaml  compose-production-template.yaml  compose-template.yaml  compose.yaml  docker-compose.yaml  docker_build.sh  generate_compose.sh  http.dockerfile  locust.dockerfile  locust_master.dockerfile  locust_worker.dockerfile  pyproject.toml  requirements.txt  run.sh  run_local.sh  run_tests.sh  run_uvicorn.sh  scheduler.dockerfile  worker.dockerfile
.github/workflows/: build.yaml  deploy.yaml  simod-http-build.yaml
ansible/: README.md  caddyfile.j2  compose.yaml  deploy.yaml  hosts.yaml  install-docker.yaml  nginx.conf  simod-http.env.j2
simod_http/: app.py  auth.py  broker_client.py  broker_client_stub.py  configurations.py  discoveries.py  discoveries_repository.py  discoveries_repository_mongo.py  exceptions.py  files_repository_fs.py  main.py  requests.py  requests_repository.py  requests_repository_mongo.py  responses.py  router.py  scheduler.py  worker.py
simod_http/assets/: default_configuration.yaml
simod_http/discoveries/: model.py  repository.py  repository_mongo.py
simod_http/files/: model.py  repository.py  repository_fs.py
simod_http/routes/: configuration_schema.py  discoveries.py  discovery.py  index.py  token.py
src/simod_http/: .env  .env.production  app.py  archiver.py  broker_client.py  broker_client_stub.py  files_repository.py  files_repository_fs.py  main.py  notifiers.py  requests_repository.py  requests_repository_mongo.py  responses.py  router.py  simod_utils.py
tests/: .env.test  fake_simod_http.py  locustfile.py  post_request.py  post_request_production.py  post_request_simple.py  post_task.py  run.sh  run_local.sh  test_auth.py  test_configurations.py  test_main.py  test_requests_repository_mongo.py
tests/assets/: AcademicCredentials_train.csv  sample.yaml
