[tool.poetry]
name = "simod-http"
version = "0.13.1"
description = "HTTP API for handling Simod discoveries"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
requests = "^2.28.2"
python-multipart = "^0.0.6"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
gunicorn = "^21.1.0"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"
requests-toolbelt = "^0.10.1"
pytest = "^7.2.2"
httpx = "^0.23.3"
appengine-python-standard = "^1.1.2"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
